# SystemMonitor

./: .gitignore  CMakeLists.txt
inc/: board.h  protocol.h
src/: board.c  interrupts.c  main.c  protocol.c
